--- a/src/main/resources/templates/order.html
+++ b/src/main/resources/templates/order.html
@@ -2,6 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <head>
+    <meta charset="utf-8" />
     <title>Заказ</title>
     <link rel="stylesheet" th:href="@{|/css/bootstrap.min.css|}" crossorigin="anonymous">
 </head>
@@ -40,7 +41,7 @@
             <table>
                 <tr>
                     <td>
-                        <a th:href="${'/items/'+item.getId()}">
+                        <a th:href="${'/items/'+item.getItemId()}">
                             <img width="300" height="300" th:src="${'/images/'+item.getImgPath()}" alt="">
                         </a>
                     </td>
