--- a/showcase-service/src/main/resources/templates/cart.html
+++ b/showcase-service/src/main/resources/templates/cart.html
@@ -56,7 +56,7 @@
     <tr>
         <td style="text-align:right">
             <form action="/buy" method="post" th:if="${!cart.isEmpty()}">
-                <button class="btn btn-primary">Купить</button>
+                <button class="btn btn-primary" th:disabled="${!cart.isPaymentEnable}">Купить</button>
             </form>
         </td>
     </tr>
