--- a/showcase-service/src/main/resources/templates/item.html
+++ b/showcase-service/src/main/resources/templates/item.html
@@ -15,18 +15,25 @@
             </svg>
             <span>ГЛАВНАЯ</span>
         </a>
-        <a href="/orders" style="margin: 0 20px">
+        <a href="/orders" style="margin: 0 20px" th:if="${#authentication}">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-lines-fill" viewBox="0 0 16 16">
                 <path d="M6 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6m-5 6s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1zM11 3.5a.5.5 0 0 1 .5-.5h4a.5.5 0 0 1 0 1h-4a.5.5 0 0 1-.5-.5m.5 2.5a.5.5 0 0 0 0 1h4a.5.5 0 0 0 0-1zm2 3a.5.5 0 0 0 0 1h2a.5.5 0 0 0 0-1zm0 3a.5.5 0 0 0 0 1h2a.5.5 0 0 0 0-1z"/>
             </svg>
             <span>ЗАКАЗЫ</span>
         </a>
-        <a href="/cart" >
+        <a href="/cart" th:if="${#authentication}">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-basket3-fill" viewBox="0 0 16 16">
                 <path d="M5.757 1.071a.5.5 0 0 1 .172.686L3.383 6h9.234L10.07 1.757a.5.5 0 1 1 .858-.514L13.783 6H15.5a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5H.5a.5.5 0 0 1-.5-.5v-1A.5.5 0 0 1 .5 6h1.717L5.07 1.243a.5.5 0 0 1 .686-.172zM2.468 15.426.943 9h14.114l-1.525 6.426a.75.75 0 0 1-.729.574H3.197a.75.75 0 0 1-.73-.574z"/>
             </svg>
             <span>КОРЗИНА</span>
         </a>
+        <div th:unless="${#authentication}" style="margin-left: 20px">
+            <a th:href="@{/oauth2/authorization/keycloak}">Войти</a>
+        </div>
+        <p th:if="${#authentication}" style="margin-left: 20px">
+            <span th:text="${#authentication.getName()}" style="font-weight: bold"></span>
+            <a th:href="@{/logout}">Выйти</a>
+        </p>
     </div>
     <h1 style="text-align: center; margin: 20px;">Красное&Белое</h1>
     <div style="text-align: center">
@@ -42,8 +49,9 @@
         <p>
             <span th:text="${item.getDescription()}"></span>
         </p>
-        <form th:action="${'/items/'+item.getId()}" method="post">
+        <form th:action="${'/items/'+item.getId()}" method="post" th:if="${#authentication}">
             <div style="display: inline-block;" th:if="${item.getCount()!=0}">
+                <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
                 <button name="action" value="MINUS"  class="btn btn-primary">-</button>
                 <span th:text="${item.getCount()}" style="margin: 5px"></span>
                 <button name="action" value="PLUS"  class="btn btn-primary">+</button>
