--- a/showcase-service/src/main/resources/templates/orders.html
+++ b/showcase-service/src/main/resources/templates/orders.html
@@ -21,6 +21,10 @@
         </svg>
         <span>КОРЗИНА</span>
     </a>
+    <p th:if="${#authentication}" style="margin-left: 20px">
+        <span th:text="${#authentication.getName()}" style="font-weight: bold"></span>
+        <a th:href="@{/logout}">Выйти</a>
+    </p>
 </div>
 <h1 style="text-align: center; margin: 20px;">Заказы</h1>
 <table>
